syntax = "proto3";

option go_package = "github.com/samarthasthan/e-commerce/proto_go";

message SignUpRequest {
  // Request message for the SignUp service
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_no = 4;
  string password = 5;
  string role = 6;
}

message SignUpResponse {
  // Response message for the SignUp service
  bool success = 1;
  string message = 2;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string token_type = 1;
  string access_token = 2;
  string renewal_token = 3;
}

service AuthenticationService {
  // Service definition for authentication
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}
